2003-05-27  Chris Blumenberg  <cblu@apple.com>

        Fixed: 3242864 - repro assertion failure in WebIconDatabase.m for www.shutterfly.com

        Reviewed by john.

        * Misc.subproj/WebIconLoader.m:
        (-[WebIconLoader connectionDidFinishLoading:]): don't set the icon on the DB if it has no representations

2003-05-27  Richard Williamson   <rjw@apple.com>

	Fixes for IB.

        Reviewed by Eric Seymour.

        * WebView.subproj/WebPreferences.m:
        (-[WebPreferences initWithCoder:]):
	Added retain to uniqued instance 

        * WebView.subproj/WebView.m:
        (-[WebView initWithCoder:]):
        (-[WebView setPreferences:]):
	Added release check to global uniquing dictionary.

2003-05-23  Richard Williamson   <rjw@apple.com>

	Tweaks for IB.
	Updated WebView and WebPreferences to use
	keyed archiving.
	Added private method to export settable user
	defaults keys.

        Reviewed by Ken.

        * WebView.subproj/WebPreferences.m:
        (-[WebPreferences initWithCoder:]):
        (+[WebPreferences _userDefaultsKeysForIB]):
        * WebView.subproj/WebPreferencesPrivate.h:
        * WebView.subproj/WebView.m:
        (-[WebView initWithCoder:]):

2003-05-23  Richard Williamson   <rjw@apple.com>

	Added export of _WebHistoryItemChangedNotification.

        * WebKit.exp:

2003-05-23  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3259426 - Can't copy mailto links to clipboard

        Reviewed by john.

        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultUIDelegate webView:contextMenuItemsForElement:defaultMenuItems:]): offer "Copy Link to Clipboard" for all links

2003-05-22  Richard Williamson   <rjw@apple.com>

	*** Public API change ***
	100% compatible.  Added notification when history items
	change values.

	Fixed 3265672
        Reviewed by John.

        * History.subproj/WebHistoryItem.h:
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem setAlternateTitle:]):